--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "PokerHandEvaluator"]
-	path = PokerHandEvaluator
+	path = dependencies/PokerHandEvaluator
 	url = https://github.com/HenryRLee/PokerHandEvaluator.git
